--- a/templates/companies.j2
+++ b/templates/companies.j2
@@ -36,7 +36,9 @@
 </head>
 
 <body>
-    <h1>Companies</h1>
+    <div class="header">
+        <h1>Companies</h1>
+    </div>
 
     <a href="/">Home</a> |
     <a href="/applicants">Applicants</a> |
