--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -78,7 +78,9 @@
 </head>
 
 <body>
-    <h1>Positions & Company Recruiters</h1>
+    <div class="header">
+        <h1>Positions & Company Recruiters</h1>
+    </div>
 
     <a href="/">Home</a> |
     <a href="/applicants">Applicants</a> |
