edit header styles

--- a/templates/applications.j2
+++ b/templates/applications.j2
@@ -121,10 +121,10 @@
 
     <!-- SEARCH -->
     <div id='search'>
+        <h3>Search Applications</h3>
         <!-- form to SEARCH Applications for an Application -->
         <form id="searchApplications" action="/search-applications" method="get">
             <fieldset>
-                <h3><strong>Search Applications</strong></h3>
                 <label for="applicant">Applicant Name:</label>
                 <select class="form-control" id="applicant" name="applicant" placeholder="">
                 {% for applicant in applicants %}
