--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -372,10 +372,10 @@
     </div>
 
     <div id='search-company'>
+        <h3>Search Positions by Company</h3>
         <!-- form to SEARCH Positions by Company -->
         <form id="searchPositionsByCompany" action="/search-positions" method="get">
             <fieldset>
-                <h3><strong>Search Positions by Company</strong></h3>
                 <label for="company-name">Company Name</label>
                     <select class="form-control" name="company-name" id="company-name">
                         {% for company in company_data %}
