--- a/templates/search_positions.j2
+++ b/templates/search_positions.j2
@@ -5,8 +5,9 @@
 </head>
 
 <body>
-
-<h1>Positions</h1>
+    <div class="header">
+        <h1>Positions</h1>
+    </div>
 
     <a href="/">Home</a> |
     <a href="/applicants">Applicants</a> |
