Made website links hyperlinks

--- a/templates/companies.j2
+++ b/templates/companies.j2
@@ -82,7 +82,11 @@
                 {% for key in item.keys() %}
 
                     <!-- Create a <td> element with the value of that key in it -->
+                    {% if key == 'website' %}
+                        <td><a href="{{item[key]}}"> {{item[key]}}</a> </td>
+                    {% else %}
                     <td> {{item[key]}} </td> 
+                    {% endif %}
                 {% endfor %}
                 </tr>
             {% endfor %}
