edit insert form header styles

--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -109,11 +109,11 @@
 
     <!-- INSERT -->
     <div id='insert'>
+        <h3>Add Applicant</h3>
         <!-- form to INSERT new Applicant into Applicants entity -->
         <form id="insertApplicant" action="/applicants" method="post">
             
             <fieldset>
-                <h3><strong>Add Applicant</strong></h3>
                 <!-- placeholder shows ghost text, required forces an input, pattern forces input adherance -->
                 <label for="name">Name: </label>
                 <input 
