--- a/templates/applications.j2
+++ b/templates/applications.j2
@@ -144,10 +144,10 @@
 
     <!-- INSERT -->
     <div id='insert'>
+        <h3>Add Application</h3>
         <!-- form to INSERT new Application into Applications entity -->
         <form id="insertApplication" action="/applications" method="post">
             <fieldset>
-                <h3><strong>Add Application</strong></h3>
                 <!-- placeholder shows ghost text, required forces an input, pattern forces input adherance -->
                 
                 <label for="applicant">Applicant Name:</label>
