--- a/templates/companies.j2
+++ b/templates/companies.j2
@@ -96,10 +96,10 @@
 
     <!-- INSERT -->
     <div id='insert'>
+        <h3>Add Company</h3>
         <!-- form to INSERT new Company into Companies entity -->
         <form id="insertCompany" action="/companies" method="post">
             <fieldset>
-                <h3><strong>Add Company</strong></h3>
                 <!-- placeholder shows ghost text, required forces an input, pattern forces input adherance -->
                 <label for="company">Company: </label>
                 <input 
