Made websites hyperlinks on Companies page, added new pattern for update applicant email, new pattern for add company and edit company website

--- a/templates/edit_applicant.j2
+++ b/templates/edit_applicant.j2
@@ -49,11 +49,12 @@
                 />
                 <label for="email">Email</label> 
                 <input 
-                    type="email" 
+                    type="text" 
                     class="form-control" 
                     id="email" 
                     name="email" 
                     value="{{data[0].email}}"
+                    pattern="[^@\s]+@[^@\s]+\.[^@\s]+"
                     required
                 />
                 <div class="wrapper">
