--- a/templates/companies.j2
+++ b/templates/companies.j2
@@ -6,6 +6,12 @@
     people.j2 file from the Flask Starter App repo by Professor Michael Curry
     https://github.com/osu-cs340-ecampus/flask-starter-app/blob/master/bsg_people_app/templates/people.j2
 -->
+<!--
+    Citation for regex in pattern attribute of INSERT form's url input for "website":
+    11/28/2022
+    Copied from:
+    https://stackoverflow.com/questions/3809401/what-is-a-good-regular-expression-to-match-a-url
+-->
 <!-- Adapted from the companies_crud.html UI design -->
 <head>
     <title>Companies</title>
@@ -116,9 +122,10 @@
 
                 <label for="website">Website: </label>
                 <input 
-                    type="url" 
+                    type="url"
                     class="form-control" 
                     id="website" name="website"
+                    pattern="(https?:\/\/(?:www\.|(?!www))[a-zA-Z0-9][a-zA-Z0-9-]+[a-zA-Z0-9]\.[^\s]{2,}|www\.[a-zA-Z0-9][a-zA-Z0-9-]+[a-zA-Z0-9]\.[^\s]{2,}|https?:\/\/(?:www\.|(?!www))[a-zA-Z0-9]+\.[^\s]{2,}|www\.[a-zA-Z0-9]+\.[^\s]{2,})"
                     placeholder="https://www.google.com" 
                 />
 
