--- a/templates/companies.j2
+++ b/templates/companies.j2
@@ -38,13 +38,14 @@
 <body>
     <div class="header">
         <h1>Companies</h1>
+        <div class="navbar">
+            <a href="/">Home</a> |
+            <a href="/applicants">Applicants</a> |
+            <a href="/applications">Applications</a> |
+            <a href="/companies">Companies</a> |
+            <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a>
+        </div>
     </div>
-
-    <a href="/">Home</a> |
-    <a href="/applicants">Applicants</a> |
-    <a href="/applications">Applications</a> |
-    <a href="/companies">Companies</a> |
-    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a>
 
     <!-- BROWSE -->
     <div id='browse'>
