--- a/templates/delete_application.j2
+++ b/templates/delete_application.j2
@@ -14,13 +14,14 @@
 <body>
     <div class="header">
         <h1>Applications</h1>
+        <div class="navbar">
+            <a href="/">Home</a> |
+            <a href="/applicants">Applicants</a> |
+            <a href="/applications">Applications</a> |
+            <a href="/companies">Companies</a> |
+            <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a>
+        </div>
     </div>
-
-    <a href="/">Home</a> |
-    <a href="/applicants">Applicants</a> |
-    <a href="/applications">Applications</a> |
-    <a href="/companies">Companies</a> |
-    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a></p>
 
     <!-- DELETE -->
     <div id='delete'>
