add styles to home page headers and paragraph

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,19 +3,24 @@
 <head>
     <title>DreamOffer</title>
     <meta name="Job Application Data Storage" content="Landing page">
+    <link rel="stylesheet" href="../static/style.css" type="text/css">
 </head>
 
 <body>
+    <div class="header">
+        <h1>DreamOffer</h1>
+        <div class="navbar">
+            <a href="/">Home</a> |
+            <a href="/applicants">Applicants</a> |
+            <a href="/applications">Applications</a> |
+            <a href="/companies">Companies</a> |
+            <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a>
+        </div>
+    </div>
 
-    <h1>DreamOffer</h1>
-
-    <span>Home</span> |
-    <a href="/applicants">Applicants</a> |
-    <a href="/applications">Applications</a> |
-    <a href="/companies">Companies</a> |
-    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a>
-
-    <h2>Every offer starts as a dream.</h2>
+    <div class="wrapper">
+        <h2 class="title">Every offer starts as a dream.</h2>
+    </div>
 
     <p>When applying for internships/jobs, Computer Science students may find 
         themselves sending out hundreds of applications. DreamOffer, a 
