--- a/static/style.css
+++ b/static/style.css
@@ -47,6 +47,37 @@ input {
 
 /* TYPOGRAPHY STYLES */
 
+body > .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.title {
+  margin: 25px 0;
+  text-align: center;
+  font-size: 28px;
+  color: var(--darker-blue);
+  position: relative;
+  width: max-content;
+}
+
+.title::after {
+  content: "";
+  background: #2a97c6;
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+}
+
+.wrapper + p {
+  padding: 0 150px 25px;
+  font-size: 18px;
+  text-align: justify;
+}
+
 div > h3 {
   margin-top: 15px;
   color: #2a97c6;
