--- a/templates/edit_position.j2
+++ b/templates/edit_position.j2
@@ -6,6 +6,12 @@
     edit_people.j2 file from the Flask Starter App repo by Professor Michael Curry
     https://github.com/osu-cs340-ecampus/flask-starter-app/blob/master/bsg_people_app/templates/edit_people.j2
 -->
+<!--
+    Citation for regex in pattern attribute for "link":
+    11/28/2022
+    Copied from:
+    https://stackoverflow.com/questions/3809401/what-is-a-good-regular-expression-to-match-a-url
+-->
 <head>
 	<title>Edit Position</title>
     <link href="../static/style.css" rel="stylesheet" type="text/css" />
@@ -66,11 +72,12 @@
                 />
                 <label for="link">Link</label> 
                 <input 
-                    type="text" 
+                    type="url" 
                     class="form-control"
                     id="link" name="link" 
                     value="{{data[0].link}}"
                     maxlength="100"
+                    pattern="(https?:\/\/(?:www\.|(?!www))[a-zA-Z0-9][a-zA-Z0-9-]+[a-zA-Z0-9]\.[^\s]{2,}|www\.[a-zA-Z0-9][a-zA-Z0-9-]+[a-zA-Z0-9]\.[^\s]{2,}|https?:\/\/(?:www\.|(?!www))[a-zA-Z0-9]+\.[^\s]{2,}|www\.[a-zA-Z0-9]+\.[^\s]{2,})"
                     required
                 />
                 <div class="wrapper">
