--- a/templates/edit_recruiter.j2
+++ b/templates/edit_recruiter.j2
@@ -12,6 +12,12 @@
     Copied from:
     https://stackoverflow.com/questions/26821463/regex-exact-match-first-and-last-name-with-one-space-between
 -->
+<!--
+    Citation for regex in pattern attribute for "linkedin":
+    11/28/2022
+    Copied from:
+    https://stackoverflow.com/questions/3809401/what-is-a-good-regular-expression-to-match-a-url
+-->
 <head>
 	<title>Edit Recruiter</title>
     <link href="../static/style.css" rel="stylesheet" type="text/css" />
@@ -64,11 +70,13 @@
                 />
                 <label for="linkedin">LinkedIn</label> 
                 <input 
-                    type="text" 
+                    type="url" 
                     class="form-control"
                     id="linkedin" name="linkedin" 
                     value="{{ data[0].linkedin }}"
+                    pattern="(https?:\/\/(?:www\.|(?!www))[a-zA-Z0-9][a-zA-Z0-9-]+[a-zA-Z0-9]\.[^\s]{2,}|www\.[a-zA-Z0-9][a-zA-Z0-9-]+[a-zA-Z0-9]\.[^\s]{2,}|https?:\/\/(?:www\.|(?!www))[a-zA-Z0-9]+\.[^\s]{2,}|www\.[a-zA-Z0-9]+\.[^\s]{2,})"
                     maxlength="100"
+                    required
                 />
                 <label for="lastContacted">Last Contacted</label> 
                 <input 
@@ -76,6 +84,7 @@
                     class="form-control"
                     id="lastContacted" name="lastContacted" 
                     value="{{ data[0].lastContacted }}"
+                    required
                 />
                 <label for="details">Details</label> 
                 <input 
@@ -84,6 +93,7 @@
                     id="details" name="details" 
                     value="{{ data[0].details }}"
                     maxlength="500"
+                    required
                 />
                 <div class="wrapper">
                     <input 
