--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -12,6 +12,12 @@
     Copied from:
     https://stackoverflow.com/questions/26821463/regex-exact-match-first-and-last-name-with-one-space-between
 -->
+<!--
+    Citation for regex in pattern attribute of INSERT Position and INSERT Recruiter form's url input for "link" and "linkedin":
+    11/28/2022
+    Copied from:
+    https://stackoverflow.com/questions/3809401/what-is-a-good-regular-expression-to-match-a-url
+-->
 <!-- Adapted from the positionscompanyrecruiters_crud.html UI design -->
 <head>
     <title>Positions and Recruiters</title>
@@ -119,9 +125,12 @@
                         </a>
                     </td>
                 {% for key in item.keys() %}
-
+                    {% if key == 'link' %}
+                        <td><a href="{{item[key]}}"> {{item[key]}}</a> </td>
+                    {% else %}
                     <!-- Create a <td> element with the value of that key in it -->
-                    <td> {{item[key]}} </td> 
+                        <td> {{item[key]}} </td> 
+                    {% endif %} 
                 {% endfor %}
                 </tr>
             {% endfor %}
@@ -164,9 +173,12 @@
                         </a>
                     </td>
                 {% for key in item.keys() %}
-
+                    {% if key == 'link' %}
+                        <td><a href="{{item[key]}}"> {{item[key]}}</a> </td>
+                    {% else %}
                     <!-- Create a <td> element with the value of that key in it -->
-                    <td> {{item[key]}} </td> 
+                        <td> {{item[key]}} </td> 
+                    {% endif %}
                 {% endfor %}
                 </tr>
             {% endfor %}
@@ -206,9 +218,12 @@
                         </a>
                     </td>
                 {% for key in item.keys() %}
-
+                    {% if key == 'linkedin' %}
+                        <td><a href="{{item[key]}}"> {{item[key]}}</a> </td>
+                    {% else %}
                     <!-- Create a <td> element with the value of that key in it -->
-                    <td> {{item[key]}} </td> 
+                        <td> {{item[key]}} </td> 
+                    {% endif %}
                 {% endfor %}
                 </tr>
             {% endfor %}
@@ -257,10 +272,11 @@
                 />
                 <label for="link">Link</label> 
                 <input 
-                    type="text" 
+                    type="url" 
                     class="form-control"
                     id="link" name="link" 
-                    placeholder="apple.com"
+                    placeholder="https://apple.com"
+                    pattern="(https?:\/\/(?:www\.|(?!www))[a-zA-Z0-9][a-zA-Z0-9-]+[a-zA-Z0-9]\.[^\s]{2,}|www\.[a-zA-Z0-9][a-zA-Z0-9-]+[a-zA-Z0-9]\.[^\s]{2,}|https?:\/\/(?:www\.|(?!www))[a-zA-Z0-9]+\.[^\s]{2,}|www\.[a-zA-Z0-9]+\.[^\s]{2,})"
                     maxlength="100"
                     required 
                 />
@@ -338,10 +354,11 @@
                 />
                 <label for="linkedin">LinkedIn</label> 
                 <input 
-                    type="text" 
+                    type="url" 
                     class="form-control"
                     id="linkedin" name="linkedin" 
-                    placeholder="linkedin.com/in/johnsmith"
+                    placeholder="https://linkedin.com/in/johnsmith"
+                    pattern="(https?:\/\/(?:www\.|(?!www))[a-zA-Z0-9][a-zA-Z0-9-]+[a-zA-Z0-9]\.[^\s]{2,}|www\.[a-zA-Z0-9][a-zA-Z0-9-]+[a-zA-Z0-9]\.[^\s]{2,}|https?:\/\/(?:www\.|(?!www))[a-zA-Z0-9]+\.[^\s]{2,}|www\.[a-zA-Z0-9]+\.[^\s]{2,})"
                     maxlength="100"
                     required
                 />
