--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -339,10 +339,11 @@
                 />
                 <label for="email">Email</label> 
                 <input 
-                    type="email" 
+                    type="text" 
                     class="form-control"
                     id="email" name="email" 
                     placeholder="smithj@gmail.com"
+                    pattern="[^@\s]+@[^@\s]+\.[^@\s]+"
                     maxlength="50"
                 />
                 <label for="phone">Phone</label> 
