edit new and update button styles

--- a/templates/edit_applicant.j2
+++ b/templates/edit_applicant.j2
@@ -63,7 +63,7 @@
                         type="submit" 
                         value="Update Applicant"
                         name="Update_Applicant"
-                        class="btn btn-primary" 
+                        class="btn new-btn" 
                         style="margin:.5rem;"
                     />
                     <a class="btn-anchor" href='/applicants'>
