--- a/templates/edit_company.j2
+++ b/templates/edit_company.j2
@@ -70,7 +70,7 @@
                         type="submit" 
                         value="Update Company"
                         name="Update_Company"
-                        class="btn btn-primary" 
+                        class="btn new-btn" 
                         style="margin:.5rem;"
                     />
                     <a class="btn-anchor" href='/companies'>
