--- a/templates/edit_application.j2
+++ b/templates/edit_application.j2
@@ -67,7 +67,7 @@
                         type="submit" 
                         value="Update Application"
                         name="Update_Application"
-                        class="btn btn-primary" 
+                        class="btn new-btn" 
                         style="margin:.5rem;"
                     />
                     <a class="btn-anchor" href='/applications'>
