--- a/templates/edit_position.j2
+++ b/templates/edit_position.j2
@@ -91,7 +91,7 @@
                         type="submit" 
                         value="Update Position"
                         name="Update_Position"
-                        class="btn btn-primary" 
+                        class="btn new-btn" 
                         style="margin:.5rem;"
                     />
                     <a class="btn-anchor" href='/positionscompanyrecruiters'>
