--- a/templates/edit_recruiter.j2
+++ b/templates/edit_recruiter.j2
@@ -108,7 +108,7 @@
                         type="submit" 
                         value="Update Recruiter"
                         name="Update_Recruiter"
-                        class="btn btn-primary" 
+                        class="btn new-btn" 
                         style="margin:.5rem;"
                     />
                     <a class="btn-anchor" href='/positionscompanyrecruiters'>
